# composer-cli

./: .cz.yaml  .gitignore  .goreleaser.yml  .pre-commit-config.yaml  BUILD  BUILD.bazel  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  VERSION  WORKSPACE  build.sh  go.mod  go.sum  main.go  package.json
.github/: PULL_REQUEST_TEMPLATE.md  cli_go_ci.yaml
.github/PULL_REQUEST_TEMPLATE/: BUGFIX_TEMPLATE.md  chore_refactor.md  feature_proposal.md
.github/workflows/: build_and_upload.yaml  bumpversion.yaml  ci.yaml  generic-ci.yaml  go-ci.yaml  pushversion.yaml  release.yml
constants/: BUILD.bazel  constants.go  errors.go
docs/: README.md  configuration.md  getting-started.md  iam.md  installation.md  location.md  swarms-and-infrastructure.md  tenants-users-and-gateways.md
requirements/: private-operator.md  public-operator.md
src/action/: BUILD.bazel  account.go  account_interactive.go  agent.go  agent_interactive.go  auth.go  config.go  distributor.go  distributor_interactive.go  gateway.go  gateway_interactive.go  login.go  login_interactive.go  logout.go  logout_interactive.go  nexus.go  node.go  node_interactive.go  operator.go  operator_interactive.go  project.go  project_interactive.go  redundancy_class_interactive.go  redundency_class.go  ring.go  ring_interactive.go  server.go  setup.go  swarm.go  swarm_interactive.go  tenant.go  tenant_interactive.go  token.go  token_interactive.go  version.go
src/actions/: BUILD  actions.go  login.go  logout.go  operator.go  tenant.go  token.go
src/api/: BUILD  BUILD.bazel  account.go  agents.go  auth_api.go  authentication_client.go  distributor.go  gateway.go  location_api.go  location_api_mock.go  nexus.go  node.go  nodes.go  operator.go  paginator_handler.go  project.go  redundancy_class.go  request.go  response.go  response_extractors.go  ring.go  swarm.go  tenant.go  url_builder.go  user.go  user_api.go
src/cmd/: BUILD.bazel  account.go  agent.go  auth.go  config.go  distributor.go  docs.go  gateway.go  iam.go  login.go  logout.go  nexus.go  node.go  operator.go  policy.go  project.go  redundancy_class.go  redundancy_class_recovery.go  root.go  root_init.go  server.go  swarm.go  tenant.go  token.go  user.go  version.go
src/cmd/agent/: BUILD.bazel  agent_cmd.go  agent_sub_cmd_create.go  agent_sub_cmd_create_test.go  agent_sub_cmd_describe.go  agent_sub_cmd_describe_structure_test.go  agent_sub_cmd_edit.go  agent_sub_cmd_edit_structure_test.go  agent_sub_cmd_list.go  agent_sub_cmd_list_test.go  agent_sub_cmd_remove.go  agent_sub_cmd_remove_test.go  agent_sub_cmd_status.go  agent_sub_cmd_status_test.go
src/cmd/auth/: BUILD.bazel  auth_cmd.go  auth_sub_cmd_activate.go  auth_sub_cmd_activate_test.go  auth_sub_cmd_login.go  auth_sub_cmd_login_test.go  auth_sub_cmd_logout.go  auth_sub_cmd_logout_test.go  auth_sub_cmd_signup.go  auth_sub_cmd_signup_structure_test.go
src/cmd/config/: BUILD.bazel  config_cmd.go  config_sub_cmd_edit.go  config_sub_cmd_edit_structure_test.go  config_sub_cmd_init.go  config_sub_cmd_profiles.go  config_sub_cmd_profiles_structure_test.go  config_sub_cmd_switch_profile.go  config_sub_cmd_switch_profile_structure_test.go  config_sub_cmd_validate.go  config_sub_cmd_validate_structure_test.go  config_sub_cmd_view.go  config_sub_cmd_view_structure_test.go
src/cmd/docs/: BUILD.bazel  docs_cmd.go  docs_sub_cmd_man.go  docs_sub_cmd_man_structure_test.go  docs_sub_cmd_markdown.go  docs_sub_cmd_markdown_structure_test.go  docs_sub_cmd_rst.go  docs_sub_cmd_rst_structure_test.go  docs_sub_cmd_tree.go  docs_sub_cmd_tree_structure_test.go  docs_sub_cmd_yaml.go  docs_sub_cmd_yaml_structure_test.go
src/cmd/infrastructure/: BUILD.bazel  infrastructure_cmd.go  infrastructure_cmd_structure_test.go
src/cmd/infrastructure/location/: BUILD.bazel  location_cmd.go  location_sub_cmd_create_virtual.go  location_sub_cmd_create_virtual_node.go  location_sub_cmd_create_virtual_node_structure_test.go  location_sub_cmd_create_virtual_structure_test.go  location_sub_cmd_describe.go  location_sub_cmd_describe_integration_test.go  location_sub_cmd_describe_structure_test.go  location_sub_cmd_list.go  location_sub_cmd_list_integration_test.go  location_sub_cmd_list_structure_test.go
src/cmd/operator/: BUILD.bazel  operator_cmd.go  operator_sub_cmd_connect.go  operator_sub_cmd_connect_test.go
src/cmd/version/: BUILD.bazel  version_cmd.go  version_cmd_structure_test.go
src/command/: access.go  login.go  logout.go  operator.go  swarm.go  tenant.go
src/commands/: access.go  login.go  logout.go  operator.go  swarm.go  tenant.go
src/configuration/: BUILD  BUILD.bazel  configuration.go  configuration_mock.go
src/input/: BUILD  input.go
src/request_utils/: BUILD  BUILD.bazel  bound_request.go  generic_request.go
src/service/: BUILD.bazel  agent_service.go  agent_service_mock.go  auth_service.go  auth_service_mock.go  config_service.go  config_service_mock.go  location_service.go  location_service_mock.go  location_service_models.go  location_service_printer.go  location_service_printer_test.go  location_service_test.go  operator_service.go  operator_service_mock.go
src/tui/: BUILD.bazel  choose.go  email_bulk_textarea.go  http.go  input.go  inputs.go  list.go  textarea.go
tenant-list/: tenant-list.go
tests/: README.md
tests/e2e/auth/: BUILD.bazel  activate_test.go  signup_test.go
tests/setup/: BUILD.bazel  test_runner.go  test_runner_models.go  test_runner_options.go
tests/utils/: BUILD.bazel  faker.go  kafka.go  keep_testing.go
utils/: BUILD  BUILD.bazel  compute.go  crypto.go  file.go  filter.go  flags.go  formatter.go  json.go  printer.go  schema.go  secret.go  slices.go  string.go  validate.go  validator.go
utils/printer/: BUILD.bazel  printer.go  printer_test.go
utils/printer/common/: BUILD.bazel  config.go
utils/printer/table/: BUILD.bazel  table.go  table_test.go
utils/printer/text/: BUILD.bazel  text.go  text_test.go
utils/printer/tree/: BUILD.bazel  tree.go  tree_test.go
utils/printer/utils/: BUILD.bazel  separators.go  size.go
