load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "utils",
    srcs = [
        "compute.go",
        "crypto.go",
        "file.go",
        "filter.go",
        "flags.go",
        "formatter.go",
        "json.go",
        "printer.go",
        "schema.go",
        "secret.go",
        "slices.go",
        "string.go",
        "validate.go",
    ],
    importpath = "github.com/cubbit/composer-cli/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//constants",
        "//src/configuration",
        "@com_github_charmbracelet_lipgloss//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@in_gopkg_yaml_v3//:go_default_library",
    ],
)
