load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "api",
    srcs = [
        "account.go",
        "agents.go",
        "auth_api.go",
        "authentication_client.go",
        "gateway.go",
        "location_api.go",
        "nexus.go",
        "node.go",
        "operator.go",
        "paginator_handler.go",
        "project.go",
        "redundancy_class.go",
        "request.go",
        "response.go",
        "response_extractors.go",
        "swarm.go",
        "tenant.go",
        "url_builder.go",
        "user.go",
        "user_api.go",
    ],
    importpath = "github.com/cubbit/composer-cli/src/api",
    visibility = ["//visibility:public"],
    deps = [
        "//constants",
        "//src/configuration",
        "//src/request_utils",
        "//utils",
    ],
)
