load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "api",
    srcs = [
        "agents.go",
        "auth_api.go",
        "authentication_client.go",
        "location_api.go",
        "location_api_mock.go",
        "operator_api.go",
        "paginator_handler.go",
        "request.go",
        "response.go",
        "response_extractors.go",
        "url_builder.go",
        "user_api.go",
    ],
    importpath = "github.com/cubbit/composer-cli/src/api",
    visibility = ["//visibility:public"],
    deps = [
        "//constants",
        "//src/configuration",
        "//src/request_utils",
        "//utils",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
