load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "config.go",
        "docs.go",
        "gateway.go",
        "iam.go",
        "nexus.go",
        "node.go",
        "operator.go",
        "policy.go",
        "project.go",
        "redundancy_class.go",
        "redundancy_class_recovery.go",
        "root.go",
        "root_init.go",
        "swarm.go",
        "tenant.go",
        "user.go",
    ],
    importpath = "github.com/cubbit/composer-cli/src/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//src/action",
        "//src/api",
        "//src/cmd/agent",
        "//src/cmd/auth",
        "//src/cmd/infrastructure",
        "//src/cmd/operator",
        "//src/configuration",
        "//src/service",
        "//utils",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_cobra//doc:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
    ],
)
