load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "root.go",
        "root_init.go",
    ],
    importpath = "github.com/cubbit/composer-cli/src/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//src/api",
        "//src/cmd/auth",
        "//src/cmd/config",
        "//src/cmd/docs",
        "//src/cmd/infrastructure",
        "//src/cmd/operator",
        "//src/configuration",
        "//src/service",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
