load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "configuration",
    srcs = [
        "configuration.go",
        "configuration_mock.go",
    ],
    importpath = "github.com/cubbit/composer-cli/src/configuration",
    visibility = ["//visibility:public"],
    deps = [
        "//constants",
        "//src/tui",
        "@com_github_burntsushi_toml//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)
