load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "service",
    srcs = [
        "agent_service.go",
        "agent_service_mock.go",
        "auth_service.go",
        "auth_service_mock.go",
        "config_service.go",
        "config_service_mock.go",
        "location_service.go",
        "location_service_mock.go",
        "location_service_models.go",
        "location_service_printer.go",
        "operator_service.go",
        "operator_service_mock.go",
    ],
    importpath = "github.com/cubbit/composer-cli/src/service",
    visibility = ["//visibility:public"],
    deps = [
        "//constants",
        "//src/api",
        "//src/configuration",
        "//src/tui",
        "//utils",
        "//utils/printer",
        "//utils/printer/table",
        "//utils/printer/tree",
        "//utils/printer/utils",
        "@com_github_burntsushi_toml//:go_default_library",
        "@com_github_charmbracelet_lipgloss//:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_pkg_browser//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

go_test(
    name = "service_test",
    srcs = [
        "location_service_printer_test.go",
        "location_service_test.go",
    ],
    embed = [":service"],
    deps = [
        "//src/api",
        "//src/configuration",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
