load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "tui",
    srcs = [
        "choose.go",
        "http.go",
        "inputs.go",
        "list.go",
    ],
    importpath = "github.com/cubbit/composer-cli/src/tui",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_charmbracelet_bubbles//help:go_default_library",
        "@com_github_charmbracelet_bubbles//key:go_default_library",
        "@com_github_charmbracelet_bubbles//paginator:go_default_library",
        "@com_github_charmbracelet_bubbles//spinner:go_default_library",
        "@com_github_charmbracelet_bubbles//textinput:go_default_library",
        "@com_github_charmbracelet_bubbletea//:go_default_library",
        "@com_github_charmbracelet_lipgloss//:go_default_library",
        "@com_github_mattn_go_runewidth//:go_default_library",
        "@com_github_muesli_reflow//truncate:go_default_library",
        "@com_github_sahilm_fuzzy//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
