load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "utils",
    srcs = [
        "faker.go",
        "keep_testing.go",
    ],
    importpath = "github.com/cubbit/composer-cli/tests/utils",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bxcodec_faker_v4//:faker",
        "@com_github_bxcodec_faker_v4//pkg/options",
    ],
)
