load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "printer",
    srcs = ["printer.go"],
    importpath = "github.com/cubbit/composer-cli/utils/printer",
    visibility = ["//visibility:public"],
    deps = [
        "//utils/printer/table",
        "//utils/printer/text",
        "//utils/printer/tree",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

go_test(
    name = "printer_test",
    srcs = ["printer_test.go"],
    embed = [":printer"],
    deps = [
        "//utils/printer/table",
        "//utils/printer/tree",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
