load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "auth",
    srcs = [
        "auth_cmd.go",
        "auth_sub_cmd_login.go",
        "auth_sub_cmd_logout.go",
    ],
    importpath = "github.com/cubbit/composer-cli/src/cmd/auth",
    visibility = ["//visibility:public"],
    deps = [
        "//src/service",
        "//utils",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_test(
    name = "auth_test",
    srcs = [
        "auth_sub_cmd_login_test.go",
        "auth_sub_cmd_logout_test.go",
    ],
    embed = [":auth"],
    deps = [
        "//src/service",
        "@com_github_spf13_cobra//:cobra",
    ],
)
