load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "infrastructure",
    srcs = ["infrastructure_cmd.go"],
    importpath = "github.com/cubbit/composer-cli/src/cmd/infrastructure",
    visibility = ["//visibility:public"],
    deps = [
        "//src/cmd/infrastructure/location",
        "//src/service",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_test(
    name = "infrastructure_test",
    srcs = ["infrastructure_cmd_structure_test.go"],
    embed = [":infrastructure"],
    tags = ["unit"],
    deps = [
        "//src/service",
        "@com_github_spf13_cobra//:cobra",
    ],
)
