load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "operator",
    srcs = [
        "operator_cmd.go",
        "operator_sub_cmd_connect.go",
    ],
    importpath = "github.com/cubbit/composer-cli/src/cmd/operator",
    visibility = ["//visibility:public"],
    deps = [
        "//src/service",
        "//utils",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_test(
    name = "operator_test",
    srcs = ["operator_sub_cmd_connect_test.go"],
    embed = [":operator"],
    tags = ["unit"],
    deps = [
        "//src/service",
        "@com_github_spf13_cobra//:cobra",
    ],
)
