load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "auth_test",
    srcs = [
        "activate_test.go",
        "signup_test.go",
    ],
    tags = ["e2e"],
    deps = [
        "//tests/setup",
        "//tests/utils",
        "@com_github_segmentio_kafka_go//:go_default_library",
    ],
)
