load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "common",
    srcs = ["config.go"],
    importpath = "github.com/cubbit/composer-cli/utils/printer/common",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_charmbracelet_lipgloss//:go_default_library",
    ],
)
