load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "table",
    srcs = ["table.go"],
    importpath = "github.com/cubbit/composer-cli/utils/printer/table",
    visibility = ["//visibility:public"],
    deps = [
        "//utils/printer/common",
        "@com_github_charmbracelet_lipgloss//:go_default_library",
        "@com_github_charmbracelet_lipgloss//table:go_default_library",
    ],
)

go_test(
    name = "table_test",
    srcs = ["table_test.go"],
    embed = [":table"],
    deps = [
        "@com_github_charmbracelet_lipgloss//:go_default_library",
    ],
)
