load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "text",
    srcs = ["text.go"],
    importpath = "github.com/cubbit/composer-cli/utils/printer/text",
    visibility = ["//visibility:public"],
    deps = [
        "//utils/printer/common",
        "@com_github_charmbracelet_lipgloss//:go_default_library",
    ],
)

go_test(
    name = "text_test",
    srcs = ["text_test.go"],
    embed = [":text"],
    deps = [
        "@com_github_charmbracelet_lipgloss//:go_default_library",
    ],
)
