load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "tree",
    srcs = ["tree.go"],
    importpath = "github.com/cubbit/composer-cli/utils/printer/tree",
    visibility = ["//visibility:public"],
    deps = [
        "//utils/printer/common",
        "@com_github_charmbracelet_lipgloss//:go_default_library",
        "@com_github_charmbracelet_lipgloss//tree:go_default_library",
    ],
)

go_test(
    name = "tree_test",
    srcs = ["tree_test.go"],
    embed = [":tree"],
    deps = [
        "@com_github_charmbracelet_lipgloss//:go_default_library",
    ],
)
