load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "location",
    srcs = [
        "location_cmd.go",
        "location_sub_cmd_describe.go",
        "location_sub_cmd_list.go",
    ],
    importpath = "github.com/cubbit/composer-cli/src/cmd/infrastructure/location",
    visibility = ["//visibility:public"],
    deps = [
        "//src/service",
        "//utils",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

go_test(
    name = "location_test",
    srcs = [
        "location_sub_cmd_describe_structure_test.go",
        "location_sub_cmd_list_structure_test.go",
    ],
    embed = [":location"],
    deps = [
        "//src/service",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
